# autodE

./: .gitignore  C2H6O.xyz  INSTALL.md  README.md  install.sh  pyproject.toml  requirements.txt  setup-autode.sh  setup.py  test_integration.py
autode/: config.py  constraints.py  hessians.py  methods.py  utils.py
autode/calculations/: calculation.py  executors.py
autode/conformers/: __init__.py  conformers.py  racets.py
autode/neb/: original.py
autode/path/: adaptive.py
autode/species/: metal_builder.py  molecule.py  species.py
autode/wrappers/: CP2K.py  G09.py  GPU4PySCF.py  GXTB.py  ORCA.py  TeraChem.py  UMA.py  VeloxChem.py  XTB.py  __init__.py  docker.py  irc.py  mlip_external.py  solvator.py
autode/wrappers/keywords/: __init__.py  basis_sets.py  functionals.py  orca6.py
doc/: config.rst
docs/: orca6_features.md
examples/: gpu4pyscf_example.py
installer/: autode_install.py
providers/: uma_provider.py
tests/: test_angular_constraints.py  test_fragments.py  test_metal_builder.py  test_orca6_keywords.py  test_orca6_wrappers.py
tests/test_wrappers/: test_gpu4pyscf.py  test_uma.py  test_veloxchem.py
tests/wrapper-tests/: test-mlip-autode.slurm  test-mlip-orca-workflow.slurm  test_cp2k_2026_features.py  test_cp2k_2026_standalone.py
