[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "autode"
version = "1.4.4"
description = "Automated reaction profile generation"
authors = [
    {name = "autodE contributors"}
]
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "rdkit",
    "numpy==1.26",
    "networkx",
    "matplotlib",
    "pillow>=9.5.0",
    "cython",
    "scipy",
    "loky",
    "mendeleev",
    "pytest",
    "nvidia-ml-py3",
    "xtb"
]

[project.urls]
Homepage = "https://github.com/duartegroup/autodE"

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[tool.black]
line-length = 79
target-version = ['py39']

[tool.coverage.run]
omit = [
    "setup.py",
    "benchmark.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if\\s+(typing\\.)?TYPE_CHECKING:"
]

[tool.mypy]
# disallow_untyped_defs = true
