[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "autode"
version = "1.4.5"
description = "Automated reaction profile generation"
authors = [
    {name = "autodE contributors"}
]
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "rdkit",
    "numpy>=1.26,<3",
    "networkx",
    "matplotlib",
    "pillow>=9.5.0",
    "cython",
    "scipy",
    "loky",
    "mendeleev",
    "pytest",
    "nvidia-ml-py3",
]

[project.urls]
Homepage = "https://github.com/duartegroup/autodE"

# Constrain package discovery to the autode tree. Without this, modern
# setuptools (>=61 flat-layout autodiscovery) errors on the stray top-level
# "micromamba" helper directory in the repo root ("Multiple top-level packages
# discovered in a flat-layout"). The Cython Extension modules are declared in
# setup.py and are unaffected by this setting.
[tool.setuptools.packages.find]
include = ["autode*"]

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[tool.black]
line-length = 79
target-version = ['py39']

[tool.coverage.run]
omit = [
    "setup.py",
    "benchmark.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if\\s+(typing\\.)?TYPE_CHECKING:"
]

[tool.mypy]
# disallow_untyped_defs = true
